--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^6.0.6",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
-    "react": "^17.0.1",
+    "drei": "^2.2.21",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-download-link": "^2.3.0",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-three-fiber": "^5.3.22",
+    "three": "^0.127.0",
     "victory": "^35.4.11",
     "web-vitals": "^0.2.4"
   },
